<resources>
    <string name="app_name">Foodie</string>
    <string name="food">Fried Rice</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="friedrice_desc"><b>Fried rice</b> is a dish of cooked rice that has been stir-fried in a wok or a frying pan and is usually mixed with other ingredients such as eggs, vegetables, seafood, or meat.\nAs a homemade dish, fried rice is typically made with ingredients left over from other dishes, leading to countless variations. Fried rice first developed during the Sui Dynasty in China and as such all fried rice dishes can trace their origins to Chinese fried rice.\nFor more information, visit https://en.wikipedia.org/wiki/Fried_rice</string>
    <string name="about">About</string>
    <string name="cart">Cart</string>
    <string name="nonspicy">Tidak pedas, ya!</string>
    <string name="dine_in">Dine-In</string>
    <string name="take_away">Take away</string>
    <string name="chefnote">Not spicy</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="names">
        <item>Fried Rice</item>
        <item>Noodle</item>
        <item>Satay</item>
    </string-array>

    <string-array name="descriptions">
        <item>Fried rice is a dish of cooked rice that has been stir-fried in a wok or a frying pan and is usually mixed with other ingredients such as eggs, vegetables, seafood, or meat.</item>
        <item>Noodles are a type of food made from unleavened dough which is either rolled flat and cut, stretched, or extruded, into long strips or strings.</item>
        <item>Satay or sate in Indonesian spelling, is a Southeast Asian dish of seasoned, skewered and grilled meat, served with a sauce.</item>
    </string-array>

    <integer-array name="images">
        <item>@drawable/fried_rice</item>
        <item>@drawable/noodle</item>
        <item>@drawable/satay</item>
    </integer-array>

    <integer-array name="quantities">
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>

    <integer-array name="prices">
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
    </integer-array>

</resources>