<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Foodie.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Foodie.PopupOverlay"
            app:title="Order Here" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchDetailActivity"
            android:src="@drawable/fried_rice" />

        <TextView
            android:id="@+id/foodName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchDetailActivity"
            android:text="@string/food" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="substractOne"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/zero"
                android:textAlignment="center" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addOne"
                android:text="@string/plus" />
        </LinearLayout>

        <EditText
            android:id="@+id/chefNote_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chefnote"
            android:importantForAutofill="no"
            android:inputType="text" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/dine_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setDiningOption"
                android:text="@string/dine_in" />

            <RadioButton
                android:id="@+id/take_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setDiningOption"
                android:text="@string/take_away" />
        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/cart"
        android:onClick="showCart"
        android:src="@drawable/cart" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>