<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dish_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="launchDetailActivity"
            android:src="@drawable/fried_rice" />

        <TextView
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/dish_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchDetailActivity"
            android:text="@string/food" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/subs_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />
    </LinearLayout>
</LinearLayout>